--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -230,22 +230,22 @@
 
 % Contributors
 \newcommand{\aporte}[2]{
-        \href{#1}{#2}
+  \href{#1}{#2}
 }
 
 \newenvironment{aportes}{
-\vspace{10pt}
-\begin{minipage}{1\linewidth}
-  \tt\footnotesize
-  Visitá los repos, perfiles y estrellalos
-  \yellow{\FiveStar}, likealos \blue{\faIcon{thumbs-up}}, o \textit{algo lindo} \rosa{\faIcon{heart}}! Gracias por tu aporte:
-\vspace{-10pt}
-  \begin{multicols}{3}
-  \begin{itemize}[label={\tiny\yellow{\faIcon{medal}}}]
-      }{
-    \end{itemize}
-  \end{multicols}
-\end{minipage}
+  \vspace{10pt}
+  \begin{minipage}{1\linewidth}
+    \tt\footnotesize
+    Dale las gracias y un poco de amor \rosa{\faIcon{heart}} a los que contribuyeron!
+    Gracias por tu aporte:
+    \vspace{-10pt}
+    \begin{multicols}{3}
+      \begin{itemize}[label={\tiny\yellow{\faIcon{medal}}}]
+        }{
+      \end{itemize}
+    \end{multicols}
+  \end{minipage}
 }
 
 %=======================================================
@@ -315,7 +315,6 @@
 \def\zanguango{https://www.youtube.com/watch?v=Uzcl2gNL3zg&t=10s}
 \def\chinito{https://www.youtube.com/watch?v=ebz4xuPf-is}
 \def\neverGonnaGiveYouUp{https://www.youtube.com/watch?v=dQw4w9WgXcQ}
-
 
 %%% Iconos más usados
 \def\github{\faIcon{github}}
