--- a/3-guia/ejercicios-3/ej-16-3.tex
+++ b/3-guia/ejercicios-3/ej-16-3.tex
@@ -39,3 +39,10 @@ $\llave{c c c c c c c c}
 \separador
 
 {\it \underline{Número combinatorio}}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
