--- a/3-guia/ejercicios-3/ej-18-3.tex
+++ b/3-guia/ejercicios-3/ej-18-3.tex
@@ -41,5 +41,5 @@ El conjunto $A = \set{\foreach \k in {1,...,19}{\k, }20}$\par
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
-  \item \aporte{https://www.instagram.com/jjean.gibert}{Jean Gibert \instagram}
+  \item \aporte{https://www.instagram.com/jjean.gibert}{Jean \instagram}
 \end{aportes}
