--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -315,6 +315,7 @@
 \def\zanguango{https://www.youtube.com/watch?v=Uzcl2gNL3zg&t=10s}
 \def\chinito{https://www.youtube.com/watch?v=ebz4xuPf-is}
 \def\neverGonnaGiveYouUp{https://www.youtube.com/watch?v=dQw4w9WgXcQ}
+\def\mindExplosion{https://www.youtube.com/watch?v=9CS7j5I6aOc}
 
 %%% Iconos más usados
 \def\github{\faIcon{github}}
