--- a/3-guia/ejercicios-3/ej-27-3.tex
+++ b/3-guia/ejercicios-3/ej-27-3.tex
@@ -77,3 +77,8 @@ y dividí por algo y \textit{mirá fuerte a ese $2$ que está adelante de todo {
 
 Por lo tanto $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas. Por el principio de inducción $p(n)$ también es verdadera $\paratodo n \en \naturales$.
 
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
