--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -2,7 +2,7 @@
   Probar que las siguientes desigualdades son verdaderas para todo $n \en \naturales$
   \begin{multicols}{2}
     \begin{enumerate}[label=\roman*)]
-      \item $3^n + 5^n \leq 2^{n+2}$
+      \item $3^n + 5^n \geq 2^{n+2}$
       \item $3^n \leq n^3$
       \item $ \sumatoria{i=1}{n} \frac{n+i}{i+1} \leq 1 + n(n-1)$
       \item $ \sumatoria{i=n}{2n} \frac{i}{2^i} \leq n$
