--- a/4-guia/ejercicios-4/ej-24-4.tex
+++ b/4-guia/ejercicios-4/ej-24-4.tex
@@ -1,5 +1,5 @@
 \textit{\underline{Primos y factorización: }}
 
-\ejercicio
-
-\separadorCorto
+\begin{enunciado}{\ejercicio}
+        \hacer
+\end{enunciado}
