add extra-4-11 extra-4-13

--- a/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
@@ -1,5 +1,5 @@
 \begin{enunciado}{\ejExtra}
-  Determinar para cada par $(a,b) \en \enteros^2$ tal que $(a:b) = 7 $ el valor de
+        \hypertarget{ejExtra:4-12-coprimos}{Determinar} para cada par $(a,b) \en \enteros^2$ tal que $(a:b) = 7 $ el valor de
   $$
     (a^2b^4 : 7^5(-a + b)).
   $$
@@ -68,5 +68,11 @@ Y sí, \textit{muy rico todo}, pero esa cantinela es la misma para $D \divideA B
 a la vez, \red{porque son coprimos {\small\faIcon{brain}} }, a menos que $D = 1$ \Tilde.
 
 $$
-  D = 1 \entonces \boxed{d = 7^6}, \text{para cada } (a,b) \en \enteros^2 \Big / (a:b) = 7
+  D = 1 \entonces \boxed{d = 7^6}, \text{ para cada } (a,b) \en \enteros^2 \Big / (a:b) = 7
 $$
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
