--- a/4-guia/ejercicios-4/ej-7-4.tex
+++ b/4-guia/ejercicios-4/ej-7-4.tex
@@ -17,7 +17,7 @@
           \congruencia{10^{2n} + \ub{198}{\conga{99} 0}}{1}{99} \to \congruencia{100^n}{1}{99}\to \\
           \llave{l}{
             \flecha{sé}[que] \congruencia{100}{1}{99} \sisolosi \congruencia{100^2}{\ub{100}{ \conga{99} 1 }}{99} \to
-            \congruencia{100^2}{1}{99} \sisolosi \dots \sisolosi \congruencia{100^n}{1}{99}\\
+            \congruencia{100^2}{1}{99} \sisolosi \dots \sisolosi \congruencia{100^n}{1}{99} \\
           }
         $\par
         Se concluye que  $99 \divideA 10^{2n} + 197 \sisolosi 99 \divideA \ub{100 - 1}{99}$
@@ -40,6 +40,58 @@
         Se concluye que $9 \divideA 7 \cdot 5^{2n} + 2^{4n+1} \sisolosi 9 \divideA 9$ \red{$\leftarrow$ ¿Se concluye esto...?}
 
   \item \hacer
-  \item \hacer
+
+  \item  Hermoso ejercicio en el que sin fe en el todo poderoso Gauss sencillamente uno tira la toalla.\par
+        Sale por inducción:\par
+        \textit{Quiero ver que:}
+        $$
+          p(n) : 256 \divideA 49^n + 208n - 1
+        $$
+
+        O en notación de congruencia:
+
+        $$
+          p(n) : \congruencia{49^n + 208n - 1}{0}{256}
+        $$
+
+        \textit{Caso base:}
+        $$
+          p(1) : 256 \divideA 49^1 + 208 \cdot 1 - 1 \Tilde
+        $$
+        Por lo tanto $p(1)$ resulta verdadera.
+
+        \textit{Paso inductivo:}\par
+        Uso la notación de congruencia de acá en adelante, porque es mucho más cómodo.
+        Supongo que:
+        $$
+          p(k) : \ub{\congruencia{49^k + 208 \cdot k - 1}{0}{256}}{\purple{\text{hipótesis inductiva}}}
+          \quad \paratodo k \en \enteros
+        $$
+        es  una proposición verdadera.
+        Entonces quiere probar que:\par
+        $$
+          p(k+1) : \congruencia{49^{k+1} + 208 \cdot (k+1) - 1}{0}{256},
+        $$
+        también sea verdadera. Arranco del paso $(k+1)$ y haciendo un poco de \textit{matemagia}:
+        $$
+          \begin{array}{rcl}
+            49^{k+1} + 208 \cdot (k+1) - 1 & =                           & 49 \cdot 49^k + 208k + 208 - 1 \taa{(256)}{\purple{\text{HI}}}\equiv  49 \cdot (-208k + 1) + 208k + 208 - 1 \\
+                                           & \conga{256}                 & 49 \cdot (48k + 1) - 48k -48 - 1 = 2352 k + 49 - 48k - 49                                                   \\
+                                           & \taa{(256)}{\red{!!}}\equiv & 48 k + 49 - 48k - 49 = 0 \Tilde
+          \end{array}
+        $$
+        En \red{!!} y gracias a Gauss $\congruencia{2352}{48}{256}$ ¿Casualidad? No sé y no me importa.\par
+
+        Dado que $\congruencia{49^{k+1} + 208 \cdot (k+1) - 1}{0}{256}$, la proposición $p(k+1)$ resultó verdadera.\par\bigskip
+
+        Dado que $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas, por principio de inducción $p(n)$ también lo es para todo $n \en \naturales$.
+
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
 
