--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -69,7 +69,7 @@
 \def\congruente{\, \equiv \,}
 \newcommand{\congruencia}[3]{#1 \equiv #2 \;(#3)}
 \newcommand{\noCongruencia}[3]{#1 \not\equiv #2 \;(#3)}
-\newcommand{\conga}[1]{\stackrel{(#1)}{\congruente}}
+\newcommand{\conga}[1]{\stackrel{\mathclap{(#1)}}{\congruente}}
 \newcommand{\divset}[2]{\mathcal{D}(#1) = \set{#2}}
 \newcommand{\divsetP}[2]{\mathcal{D_+}(#1) = \set{#2}}
 \newcommand{\ub}[2]{ \underbrace{\textstyle #1}_{\mathclap{#2}} }
