--- a/5-guia/ejercicios-5-extra/ej-extra-4-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-4-5.tex
@@ -1,7 +1,6 @@
-\ejExtra
+\begin{enunciado}{\ejExtra}
 Determinar para cada $n \en \naturales$ el resto de dividir a $8^{3^n-2}$ por 20.
-
-\separadorCorto
+\end{enunciado}
 
 Quiero encontrar $r_{20}(8^{3^n-2})$ entonces analizo congruecia:\\
 $
