--- a/4-guia/ejercicios-4-extra/ej-extra-5-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-5-4.tex
@@ -1,41 +1,72 @@
-\ejExtra
+\begin{enunciado}{\ejExtra}
+  Estudiar los valores parar \textbf{todos} los $a \en \enteros$ de $(a^3 + 31 : a^2 - a + 1)$.\\
+\end{enunciado}
 
-Estudiar los valores parar \textbf{todos} los $a \en \enteros$ de $(a^3 + 1 : a^2 - a + 1)$.\\
+Simplifico la expresión $(a^3 + 31 : a^2 - a + 1)$ con el querido algoritmo de Euclides:
+$$
+  \divPol{X^3 + 31}{X^2 - X+ 1}
+$$
 
-\separadorCorto
+Por lo tanto el mcd $d = (a^3 + 31 : a^2 - a + 1) = (a^2-a+1: 30)$, es decir que:
+$$
+  d \divideA 30 \entonces d \en \set{1, 2, 3, 5, 6, 10, 15, 30}
+$$
 
-Primero hay que notar que el lado $a^2-a+1$ es siempre impar ya que:\\
-$\llaves{l}{
-		(2k-1)^2 - (2k -1) + 1 \conga2 (-1)^2 -1 + 1 \conga2 1\\
-		(2k)^2 - (2k) +1 \conga2 (0)^2 - 0 + 1\conga2 1.
-	}$ Por lo tanto 2 no puede ser un divisor de ambas expresiones  y si $2 \noDivide A \entonces 2 \cdot k \noDivide A$ tampoco.\\
-Se ve fácil contrarecíproco: $\ub{2k}{par} \divideA A \entonces 2 \divideA A$. Porque existe un $k$ tal que
-$2 \cdot c \cdot k = A \entonces 2 \cdot (c\cdot k) = A.$\\
-Ahora cuentas para simplificar la expresión y encontrar número del lado derecho.\\
-$
-	\llave{l}{
-		d \divideA  a^3 + 1\\
-		d \divideA  a^2 -a +1
-	}
-	\to d \divideA 30
-	\to\divsetP{d}{1,2,3,5,6,10,15,30}
-	\flecha{por lo de antes}[no hay divisores pares] \divsetP{d}{1,3,5,15}\\
-	\flecha{hacer tabla de restos}[empezar por los números chicos]
-	\llaves{ccc}{
-		r_3(a^3 + 1) = 0 & \text{ si }& \congruencia{a}{2}{3}\\
-		\y& &\\
-		r_3(a^2 -a + 1) = 0 & \text{ si } & \congruencia{a}{2}{3}
-	}
-	\to
-	\llaves{cc}{
-		r_5(a^3 + 1) \distinto 0 & \paratodo a \en \enteros\\
-	}
-$.\\
-Luego si  $5 \noDivide (a^3 + 1 : a^2 - a + 1) \entonces \ub{15}{5\cdot 3} \noDivide (a^3 + 1 : a^2 - a + 1)
-	\flecha{se achica el}[conjunto de divisores] \divsetP{d}{1,3}\\
-	d = \llave{ccc}{
-		3 & \text{ si } & \congruencia{a}{2}{3}\\
-		1 & \text{ si } & \congruencia{a}{1 \o 2}{3}\\
-	}
-$
+Muchos divisores. Se pueden elimiar unos cuantos notando que $a^2 - a + 1$ es una expresión siempre impar. Una forma de mostrar esto:
 
+$$
+  a^2 - a + 1 \text{ es impar }
+  \sii
+  \congruencia{a^2 - a + 1}{1}{2}
+  \Sii{\red{!}}
+  \congruencia{a \cdot (a - 1)}{0}{2}
+$$
+
+La última expresión $a \cdot (a-1)$ es siempre \magenta{par}, dado que es un número multiplicado por su consecutivo.
+{\tiny Otra forma de mostrar la paridad sería reemplazando
+por $2k$ y luego por $2k+1$ y ver que los resultados son siempre impares. Hacé lo que más te guste \faIcon[regular]{smile}!}\par\medskip
+
+Dado que esa expresión es impar podemos reducir el conjunto de divisores a:
+
+$$
+  d \divideA 30 \ytext \congruencia{d}{1}{2} \entonces d \en \set{1,3,5,15}.
+$$
+
+\textit{Tabla de restos}: Siempre empezando por el menor valor
+
+$$
+  \begin{array}{|r|ccc|}
+    \hline
+    r_3(a)           & 0 & 1 & 2           \\ \hline
+    r_3(a^2 - a + 1) & 1 & 1 & \magenta{0} \\ \hline
+  \end{array}
+$$
+
+Obtenemos que 3 \textit{es un potencial mcd} cuando $r_3(a) = 2$ o dicho de otro modo $\congruencia{a}{2}{3}$.
+
+$$
+  \begin{array}{|r|ccccc|}
+    \hline
+    r_5(a)           & 0 & 1 & 2 & 3 & 4 \\ \hline
+    r_5(a^2 - a + 1) & 1 & 1 & 3 & 2 & 3 \\ \hline
+  \end{array}
+$$
+Obtenemos que 5 \textit{no es un potencial mcd}, por lo que 15 tampoco será un divisor de la expresión  $a^2 - a + 1$.
+
+Con la información obtenida se puede concluir que:
+$$
+d = 
+\llave{l}{
+        3 \text{ si } \congruencia{a}{2}{3}\\ 
+        1 \text{ si } \noCongruencia{a}{2}{3}
+}
+$$
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/maxiitietze}{Maxi T. \github}
+
+\end{aportes}
