--- a/4-guia/ejercicios-4/ej-34-4.tex
+++ b/4-guia/ejercicios-4/ej-34-4.tex
@@ -1,1 +1,3 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+        Hallarel menor número natural $n$ tal que $(n : 3150) = 45$ y $n$ tenga exactamente 12 divisores positivos.
+\end{enunciado}
