--- a/4-guia/ejercicios-4-extra/ej-extra-11-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-11-4.tex
@@ -1,65 +1,79 @@
 \begin{enunciado}{\ejExtra}
-  Caracterizar, para \textbf{cada} $a \en \enteros$, el valor de $(a^3 + 31: a^2 -a +1)$.
+  Estudiar los valores parar \textbf{todos} los $a \en \enteros$ de $(a^3 + 31 : a^2 - a + 1)$.\\
 \end{enunciado}
 
-Acá voy a \textit{simplificar la expresión}, y usar \textit{tabla de restos}. \par
-
-\textit{Simplificar la expresión:} Siempre que se pueda está bueno usar el algoritmo de Euclides para bajarle el grado a la expresión:\par
-\begin{center}
-  \divPol{x^3 + 31}{x^2 - x +1}
-\end{center}
-
+Simplifico la expresión $(a^3 + 31 : a^2 - a + 1)$ con el querido algoritmo de Euclides:
 $$
-  d = (a^3 + 31: a^2 -a +1) \Entonces{Euclides} d = (a^2 - a + 1 : 30)
+  \divPol{X^3 + 31}{X^2 - X+ 1}
 $$
 
-Por lo tanto $d \en \set{1,2,3,5,6,10,15,30}$, muchísimos valores que puede tomar el mcd. Se descartan los pares dado que $a^2 - a +1$ es siempre impar:
+Por lo tanto el mcd $d = (a^3 + 31 : a^2 - a + 1) = (a^2-a+1: 30)$, es decir que:
+$$
+  d \divideA 30 \entonces d \en \set{1, 2, 3, 5, 6, 10, 15, 30}
+$$
+
+Muchos divisores. Se pueden elimiar unos cuantos notando que $a^2 - a + 1$ es una expresión siempre impar. Una forma de mostrar esto:
+
+$$
+  a^2 - a + 1 \text{ es impar }
+  \sii
+  \congruencia{a^2 - a + 1}{1}{2}
+  \Sii{\red{!}}
+  \congruencia{a \cdot (a - 1)}{0}{2}
+$$
+
+La última expresión $a \cdot (a-1)$ es siempre \magenta{par}, dado que es un número multiplicado por su consecutivo.
+{\tiny Otra forma de mostrar la paridad sería reemplazando
+por $2k$ y luego por $2k+1$ y ver que los resultados son siempre impares.
 $$
   \begin{array}{c}
     a = \ub{2k}{par} \entonces (2k)^2 - 2k + 1 = \ob{\ub{2 \cdot (2k^2 -k)}{par} + 1}{impar} \Tilde                 \\
     a = \ub{2k+1}{impar} \entonces (2k+1)^2 - 2(k+1) + 1 = \ob{\ub{2 \cdot (2k^2 + 3k + 2)}{par} + 1}{impar} \Tilde \\
   \end{array}
 $$
-Sin importar el valor de $a$, la expresión  $a^2 - a + 1$ no puede ser divisible por un número par es así que los posibles valores
-de $d$ se reducen a $d \en \set{1,3,5,15}$, va tomando color.\par
+Hacé lo que más te guste \faIcon[regular]{smile}!}\par\medskip
 
-\textit{Tabla de restos:} \par
-
-Con la tabla de restos podemos ver si la expresión $a^2 - a + 1$ es divisible por algún valor de los que quedaron. \textit{Siempre empezar por los valores
-  más bajos, porque ayudan a descartar los más altos}:
+Dado que esa expresión es impar podemos reducir el conjunto de divisores a:
 
 $$
-  \begin{array}{|r|c|c|c|}
+  d \divideA 30 \ytext \congruencia{d}{1}{2} \entonces d \en \set{1,3,5,15}.
+$$
+
+\textit{Tabla de restos}: Siempre empezando por el menor valor
+
+$$
+  \begin{array}{|r|ccc|}
     \hline
-    r_3(a)            & 0 & 1 & 2           \\ \hline
-    r_3(a^2 - a + 1 ) & 1 & 1 & \magenta{0} \\ \hline
+    r_3(a)           & 0 & 1 & 2           \\ \hline
+    r_3(a^2 - a + 1) & 1 & 1 & \magenta{0} \\ \hline
   \end{array}
 $$
 
-Cuando $\congruencia{a}{2}{3} $ la expresión es divisible por 3
+Obtenemos que 3 \textit{es un potencial mcd} cuando $r_3(a) = 2$ o dicho de otro modo $\congruencia{a}{2}{3}$.
 
 $$
-  \begin{array}{|r|c|c|c|c|c|}
+  \begin{array}{|r|ccccc|}
     \hline
-    r_5(a)            & 0 & 1 & 2 & 3 & 4 \\ \hline
-    r_5(a^2 - a + 1 ) & 1 & 1 & 3 & 2 & 3 \\ \hline
+    r_5(a)           & 0 & 1 & 2 & 3 & 4 \\ \hline
+    r_5(a^2 - a + 1) & 1 & 1 & 3 & 2 & 3 \\ \hline
   \end{array}
 $$
+Obtenemos que 5 \textit{no es un potencial mcd}, por lo que 15 tampoco será un divisor de la expresión  $a^2 - a + 1$.
 
-La expresión no es divisible por 5 para ningún valor de $a \en \enteros$ y si no es divisible por 5 \textbf{tampoco lo será por 15} y así es como nos ahorramos
-de calcular una tabla de restos de 15 horribles números \rosa{\faIcon{brain}}.
-
-Se puede concluir que los valores para el mcd pedido:
-
+Con la información obtenida se puede concluir que:
 $$
-  d =
-  \llave{rcl}{
-    1 \sii \noCongruencia{a}{2}{3} \\
-    3 \sii \congruencia{a}{2}{3}
-  }
+d = 
+\llave{l}{
+        3 \text{ si } \congruencia{a}{2}{3}\\ 
+        1 \text{ si } \noCongruencia{a}{2}{3}
+}
 $$
 
+% Contribuciones
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/maxiitietze}{Maxi T. \github}
+
 \end{aportes}
