--- a/4-guia/ejercicios-4-extra/ej-extra-5-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-5-4.tex
@@ -1,72 +1,61 @@
 \begin{enunciado}{\ejExtra}
-  Estudiar los valores parar \textbf{todos} los $a \en \enteros$ de $(a^3 + 31 : a^2 - a + 1)$.\\
+	Determinar lso posibles valores de $d = (a^2 - 2a -5: a-1)$ para $a \en \enteros$. Exhibir un valor de $a$
+	correspondiente a cada uno de los valores de $d$ hallados.
 \end{enunciado}
 
-Simplifico la expresión $(a^3 + 31 : a^2 - a + 1)$ con el querido algoritmo de Euclides:
+
+Parecido a cosas que ya se hicieron en otros ejercicios. Simplificamos si se puede con Euclides y después con tabla de restos
+filtramos los máximos común divisores que quedaron.\par \bigskip
+
+\textit{Euclides con División de polinomios}
 $$
-  \divPol{X^3 + 31}{X^2 - X+ 1}
+	\divPol{X^2 - 2X -5}{X-1}
 $$
 
-Por lo tanto el mcd $d = (a^3 + 31 : a^2 - a + 1) = (a^2-a+1: 30)$, es decir que:
-$$
-  d \divideA 30 \entonces d \en \set{1, 2, 3, 5, 6, 10, 15, 30}
-$$
-
-Muchos divisores. Se pueden elimiar unos cuantos notando que $a^2 - a + 1$ es una expresión siempre impar. Una forma de mostrar esto:
+Que en el resto quede un número es una excelente noticia, podemos reescribir al mcd:
 
 $$
-  a^2 - a + 1 \text{ es impar }
-  \sii
-  \congruencia{a^2 - a + 1}{1}{2}
-  \Sii{\red{!}}
-  \congruencia{a \cdot (a - 1)}{0}{2}
+	d = (a^2 - 2a -5: a-1) = (a-1 : -6)
 $$
 
-La última expresión $a \cdot (a-1)$ es siempre \magenta{par}, dado que es un número multiplicado por su consecutivo.
-{\tiny Otra forma de mostrar la paridad sería reemplazando
-por $2k$ y luego por $2k+1$ y ver que los resultados son siempre impares. Hacé lo que más te guste \faIcon[regular]{smile}!}\par\medskip
-
-Dado que esa expresión es impar podemos reducir el conjunto de divisores a:
+Con ese resultado y dado que $d  \divideA a - 1$ y también $d\divideA 6$:
 
 $$
-  d \divideA 30 \ytext \congruencia{d}{1}{2} \entonces d \en \set{1,3,5,15}.
+	d \en \set{1, 2, 3, 6}
 $$
 
-\textit{Tabla de restos}: Siempre empezando por el menor valor
+Tabla de restos para ver para que valores de $a$ se divide la expresión $a-1$
 
 $$
-  \begin{array}{|r|ccc|}
-    \hline
-    r_3(a)           & 0 & 1 & 2           \\ \hline
-    r_3(a^2 - a + 1) & 1 & 1 & \magenta{0} \\ \hline
-  \end{array}
+	\begin{array}{|r|cc|}
+		\hline
+		r_2(a)     & 0 & 1           \\ \hline
+		r_2(a - 1) & 1 & \magenta{0} \\ \hline
+	\end{array}
+	\quad
+	\begin{array}{|r|ccc|}
+		\hline
+		r_3(a)     & 0 & 1           & 2 \\ \hline
+		r_3(a - 1) & 2 & \magenta{0} & 1 \\ \hline
+	\end{array}
+	\quad
+	\begin{array}{|r|cccccc|}
+		\hline
+		r_6(a)     & 0 & 1           & 2 & 3 & 4 & 5 \\ \hline
+		r_6(a - 1) & 5 & \magenta{0} & 1 & 2 & 3 & 4 \\ \hline
+	\end{array}
+$$\par
+
+Ahora hay que elegir un valor $a$ de forma tal que $d$ sea un valor que cumpla con los resultados.\par
+
+Hay que tener cuidado, porque los conjuntos de $a$ que salen de la tabla de restos no son disjuntos.
+
+Los siguientes valores salen a ojímetro:
+$$
+	\begin{array}{c}
+		\text{si } a = 5 \entonces d = 2 \\
+		\text{si } a = 4 \entonces d = 3 \\
+		\text{si } a = 7 \entonces d = 6
+	\end{array}
 $$
 
-Obtenemos que 3 \textit{es un potencial mcd} cuando $r_3(a) = 2$ o dicho de otro modo $\congruencia{a}{2}{3}$.
-
-$$
-  \begin{array}{|r|ccccc|}
-    \hline
-    r_5(a)           & 0 & 1 & 2 & 3 & 4 \\ \hline
-    r_5(a^2 - a + 1) & 1 & 1 & 3 & 2 & 3 \\ \hline
-  \end{array}
-$$
-Obtenemos que 5 \textit{no es un potencial mcd}, por lo que 15 tampoco será un divisor de la expresión  $a^2 - a + 1$.
-
-Con la información obtenida se puede concluir que:
-$$
-d = 
-\llave{l}{
-        3 \text{ si } \congruencia{a}{2}{3}\\ 
-        1 \text{ si } \noCongruencia{a}{2}{3}
-}
-$$
-
-% Contribuciones
-\begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
-  \item \aporte{https://github.com/maxiitietze}{Maxi T. \github}
-
-\end{aportes}
