small fix extra 10 guia 4

--- a/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
@@ -56,3 +56,10 @@ Tengo que hacer una doble inclusión:
         $Y$ seguro va a estar en la unión de $Y$ con lo que sea.
 
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
