--- a/4-guia/ejercicios-4-extra/ej-extra-10-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-10-4.tex
@@ -62,4 +62,11 @@ Si te quedaste picando en \red{!!}, seguí mirando ese paso, porque son cuentas 
 Y así fue como comprobamos que el enunciado ladraba pero no mordía.\medskip
 
 Como $p(1),\, p(2),\, p(k),\, p(k+1) \ytext p(k+2)$ son verdaderas, por el principio de inducción
-también lo será $p(n) \en \naturales$.
+también lo será $p(n) \paratodo \en \naturales$.
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
