--- a/4-guia/ejercicios-4-extra/ej-extra-14-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-14-4.tex
@@ -63,9 +63,9 @@ Partiendo de $p(h+1)$
 $$
   \begin{array}{rcl}
     r_{18}(\sumatoria{k=2}{h+1} 3^k \cdot k!) & =                   &
-    r_{18}\bigl(\sumatoria{k=2}{h} 3^k \cdot k! + 3(h+1) \cdot (h+1)!\bigr)           \\
+          r_{18}\bigl(\sumatoria{k=2}{\magenta{h}} 3^k \cdot k! + 3^{h+1} \cdot (h+1)!\bigr)           \\
                                               & \igual{\purple{HI}} &
-    r_{18}\bigl(3(h+1) \cdot (h+1)!\bigr)                                             \\
+          r_{18}\bigl(3^{h+1} \cdot (h+1)!\bigr)                                             \\
                                               & \igual{\red{!}}     &
     r_{18}\bigl(3 \cdot \magenta{6} \cdot 3^h \cdot \frac{(h+1)!}{\magenta{3!}}\bigr) \\
                                               & =                   & 0
