Corrección Guía 1 ej 3.2

--- a/1-guia/ejercicios-1/ej-3-1.tex
+++ b/1-guia/ejercicios-1/ej-3-1.tex
@@ -22,7 +22,7 @@ $
 			      B = \set{1,2,\set{3},-3}
 		      \end{cases}
 		      \flecha{respueta} \quad
-		      A \nsubseteq B \flecha{dado}[que] \set{3} \notin B$
+		      A \nsubseteq B \flecha{dado}[que] 3 \in A \text{ pero } 3 \notin B$
 	\item
 	      \def\tresiiiUno{
 		      \begin{tikzpicture}[scale=0.8, baseline=0]
