--- a/1-guia/ejercicios-1/ej-14-1.tex
+++ b/1-guia/ejercicios-1/ej-14-1.tex
@@ -99,3 +99,11 @@
   $\text{$\Leftarrow$)}$ Es análogo.
   \item Mirando el item \ref{ej-14-1:itemi} sale solo. Dado que $X \triangle \vacio \igual{\red{!}} X$
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/MateCon}{Mateo Z \github}
+\end{aportes}
