--- a/1-guia/ejercicios-1/ej-3-1.tex
+++ b/1-guia/ejercicios-1/ej-3-1.tex
@@ -77,3 +77,11 @@ $
           A \nsubseteq B \flecha{dado}[que] \text{$B$ no tiene ningún elemento, sin embargo $A$ tiene un elemento: $\vacio$.}
         $
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/MateCon}{Mateo Z \github}
+\end{aportes}
