--- a/5-guia/ejercicios-5/ej-7-5.tex
+++ b/5-guia/ejercicios-5/ej-7-5.tex
@@ -67,9 +67,19 @@ $$
 	37 \divideA ( 590 + 36k )^{4321}
 	\sii
 	37 \divideA 590 + 36k
+    \sii
+	37 \divideA 590 + 36k
+    \sii
+    \congruencia{k}{35}{37}.
 $$
-como pedía el ejercicio.
-
+Por último el resultado serán los pares $(x,y) \en \enteros^2$ tales que
+$$
+	\llave{rcl}{
+		x &=& 25k + 410 \\
+		y &=& -11k - 180
+} \qquad \text{con }\quad
+    \congruencia{k}{35}{37}.
+$$
 
 
 
@@ -79,5 +89,4 @@ como pedía el ejercicio.
 	%% iconos : \github, \instagram, \tiktok, \linkedin
 	%\aporte{url}{nombre icono}
 	\item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
-	\item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
 \end{aportes}
