--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -1,6 +1,6 @@
 % Info para armar título.
 
-\title{Apunte único: Álgebra I} % título
+\title{Apunte único: Álgebra I - Práctica \guia} % título
 \author{Por alumnos de Álgebra I\\
   Facultad de Ciencias Exactas y Naturales \\
   UBA} % autores y lugar
