--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -67,6 +67,7 @@
 \def\divideA{\, \big| \,}
 \def\noDivide{\centernot\divideA}
 \def\congruente{\, \equiv \,}
+\def\noCongruente{\, \not\equiv \,}
 \newcommand{\congruencia}[3]{#1 \equiv #2 \;(#3)}
 \newcommand{\noCongruencia}[3]{#1 \not\equiv #2 \;(#3)}
 \newcommand{\conga}[1]{\stackrel{\mathclap{(#1)}}{\congruente}}
