--- a/5-guia/teoria-5/teoria-5.tex
+++ b/5-guia/teoria-5/teoria-5.tex
@@ -71,7 +71,7 @@
         tiene solución y esa solución, $\magenta{x_0}$ cumple $0 \leq \magenta{x_0} < m_1\cdot m_2 \cdots m_n$.
 \end{itemize}\bigskip
 
-\textit{Pequeño teorema de Fermat}
+\hypertarget{teoria-5:PTF}{\textit{Pequeño teorema de Fermat}}
 \begin{itemize}
   \item Sea $p$ primo, y sea $a \en \enteros$. Entonces:
         \begin{enumerate}[label=\arabic*)]
